# synthstrip

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: build-test.yml  style.yml
nipreps/synthstrip/: __init__.py  __main__.py
nipreps/synthstrip/wrappers/: nipype.py  pydra.py
